<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_background"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCoaching"
        style="@style/FeatureButtonStyle"
        android:layout_marginTop="@dimen/btn_coaching_margin_top"
        android:text="@string/text_coaching"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnChecking"
        style="@style/FeatureButtonStyle"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/text_checking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCoaching" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvLogout"
        style="@style/BottomButtonStyle"
        android:text="@string/text_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>