<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout">

    <RelativeLayout
        android:id="@+id/btnWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/margin_small">

        <FrameLayout
            style="@style/RedSeparateLineStyle"
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/margin_small">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_size"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_margin="@dimen/margin_button"
                android:layout_marginRight="@dimen/margin_button"
                android:background="@drawable/bottom_control_button_selector"
                android:text="@string/btn_back_text"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_size"
                android:layout_margin="@dimen/margin_button"
                android:layout_marginLeft="@dimen/margin_button"
                android:layout_marginStart="@dimen/margin_button"
                android:padding="@dimen/padding_small"
                android:layout_toEndOf="@id/btnBack"
                android:layout_toRightOf="@id/btnBack"
                android:background="@drawable/bottom_control_button_selector"
                android:text="@string/btn_next_text"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnComplete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_size"
                android:padding="@dimen/padding_small"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/margin_button"
                android:background="@drawable/bottom_control_button_selector"
                android:text="@string/btn_complete_text"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/questionAnswerListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnWrapper">

    </FrameLayout>
</RelativeLayout>